test/cases/compile_errors/stage1/obj/comptime_slice_of_an_undefined_slice.zig
comptime {
    var a: []u8 = undefined;
    var b = a[0..10];
    _ = b;
}

// error
// backend=stage1
// target=native
//
// tmp.zig:3:14: error: slice of undefined
